hw2/errors
trap.cpp:22:20: error: expected constructor, destructor, or type conversion before ‘(’ token
 omp_set_num_threads(numThreads);
                    ^
trap.cpp:25:22: error: expected declaration specifiers before ‘for’
 #pragma omp parallel for default(none),shared(dx),reduction(+:sum)
                      ^
trap.cpp:26:1: error: expected unqualified-id before ‘for’
 for (int i = 1;i<numSubdivisions-1;++i)
 ^
trap.cpp:26:16: error: ‘i’ does not name a type
 for (int i = 1;i<numSubdivisions-1;++i)
                ^
trap.cpp:26:36: error: expected unqualified-id before ‘++’ token
 for (int i = 1;i<numSubdivisions-1;++i)
                                    ^
trap.cpp:34:1: error: ‘sum’ does not name a type
 sum += dx;
 ^
trap.cpp:35:1: error: ‘cout’ does not name a type
 cout << sum << endl;
 ^
make: *** [all] Error 1
